<resources>
    <string name="app_name">LabCode_China</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_personal_info_access">사용자 계약 및 개인정보보호정책</string>
    <string name="txt_personal_info_access_content">
        [LAB Code]을 믿고 이용해주셔서 감사합니다! \n
        당사는 귀하의 개인 정보 보호 및 개인 정보 보호를 매우 중요하게 생각하며 귀하의 개인 권익을 보다 잘 보호하기 위해 당사 제품을 사용하기 전에 "이용 약관" 및 "개인 정보 보호 정책"의 모든 내용을 주의 깊게 읽고 동의하십시오. 약관 이후에 모든 제품 및 서비스 사용에 동의합니다. \n
        동의하지 않을 경우 당사 제품 및 서비스를 사용할 수 없으며 애플리케이션이 종료됩니다.</string>
    <string name="txt_personal_info_access_right">해당 앱은 사용자 계약 및 개인 정보 보호 정책의 동의가 필요합니다.</string>
    <string name="txt_splash">정품 확인과 정보를 한눈에</string>
    <string name="txt_access_main_text"><b>랩코드 앱 접근 <font color='#5138E5'>필수</font> 권한 안내</b></string>
    <string name="txt_access_sub_text">데이터 스캔을 위해 <font color='#303538'><b>카메라</b></font> 사용권한 \n &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 허가가 필요합니다.</string>
    <string name="txt_camera_location_right">해당 앱은 카메라,위치 권한이 필요합니다. \n
 거부된 권한을 설정에서 확인해 주세요.</string>
    <string name="txt_location_active">위치 접근 제어의 활성화가 필요합니다.</string>
    <string name="txt_scan_success_main"><b>이 제품은 <font color='#5138E5'>정품</font>입니다</b></string>
    <string name="txt_scan_success_sub">안심하시고 사용하세요, 랩코드가 등록된 \n &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 정품 제품입니다.</string>
    <string name="txt_scan_success_button">제품 상세 보기</string>
    <string name="txt_scan_guide_first">너무 가깝거나 먼거리에서는 인식률이 떨어질 수 있어요.</string>
    <string name="txt_scan_guide_second">스마트폰을 인식하고자 하는 대상과 평행을 유지해주세요.</string>
    <string name="txt_scan_guide_third">플래시나 확대 버튼을 사용하면 인식률을 높일 수 있어요.</string>
    <string name="txt_scan_guide_1_main">제품과 가깝게</string>
    <string name="txt_scan_guide_2_main">제품과 평행 유지</string>
    <string name="txt_scan_guide_3_main">플래시 사용</string>
    <string name="txt_scan_guide_1_sub">너무 가깝거나 먼 거리에서는 인식률이 \n 다소 떨어질 수 있어요</string>
    <string name="txt_scan_guide_2_sub">스마트폰을 인식하고자 하는 대상과 \n 평행을 유지해 주세요</string>
    <string name="txt_scan_guide_3_sub">인식이 잘되지 않을 경우 \n 플래시나 확대 버튼을 눌러 다시 시도해보세요</string>
    <string name="txt_scan_guide_next_button">다음</string>
    <string name="txt_scan_guide_finish_button">확인했어요</string>
    <string name="txt_scan_alert_main">인식시간 지남</string>
    <string name="txt_scan_alert_sub">인식 시간 30초가 지났어요, \n <b><font color='#5138E5'><u>스캔 가이드</u></font></b>를 읽고 스캔팁을 \n 확인 해보세요~</string>
    <string name="txt_list_blank_main">아직 스캔 해본 제품이 없어요!</string>
    <string name="txt_list_blank_sub">구매하신 제품을 스캔하시면 제품 정보와 \n 정품 여부를 확인할 수 있어요</string>
    <string name="txt_network_error">네트워크 연결 오류</string>
    <string name="txt_network_try_again">네트워크 연결이 원활하지 않습니다. \n
 연결상태를 확인하고 다시 시도해주세요</string>
    <string name="txt_agree">확인</string>
    <string name="txt_agree2">확인</string>
    <string name="txt_cancel">취소</string>
    <string name="txt_reject">거부</string>
    <string name="txt_scan">스캔</string>
    <string name="txt_list">인증내역</string>
    <string name="txt_more">더보기</string>
    <string name="txt_frequent_quest_title">자주묻는질문</string>
    <string name="txt_tos_title">이용약관</string>
    <string name="txt_scanGuide_title">스캔가이드</string>
    <string name="txt_app_version_title">앱 정보</string>
    <string name="txt_frequent_all_basic"><font color='#525A61'>전체</font></string>
    <string name="txt_frequent_all_selected"><font color='#FFFFFF'><b>전체</b></font></string>
    <string name="txt_frequent_use_basic"><font color='#525A61'>이용방법</font></string>
    <string name="txt_frequent_use_selected"><font color='#FFFFFF'><b>이용방법</b></font></string>
    <string name="txt_frequent_tech_basic"><font color='#525A61'>기술</font></string>
    <string name="txt_frequent_tech_selected"><font color='#FFFFFF'><b>기술</b></font></string>
    <string name="txt_use_1">LABCODE 사용법은 어떻게 되나요?</string>
    <string name="txt_use_2">정품 여부를 어떻게 확인할 수 있나요?</string>
    <string name="txt_use_3">LABCODE를 적용은 어떻게 하나요?</string>
    <string name="txt_tech_1">LABCODE는 어떤 서비스인가요?</string>
    <string name="txt_tech_2">LACODE는 무엇인가요?</string>
    <string name="txt_terms_title">이용약관</string>
    <string name="txt_terms">
1. 이용약관
\n
*이용약관*
\n1
\n
앱을 다운로드하거나 사용하면 이러한 약관이 자동으로 적용됩니다. 따라서 앱을 사용하기 전에 주의 깊게 읽어보아야 합니다. 앱, 앱의 일부 또는 당사의 상표는 어떠한 방식으로도 복사 또는 수정할 수 없습니다. 앱의 소스 코드를 추출할 수 없으며, 앱을 다른 언어로 번역하거나 파생 버전을 만들 수도 없습니다. 앱 자체와 앱과 관련된 모든 상표, 저작권, 데이터베이스 권한 및 기타 지적 재산권은 여전히 스냅태그 주식회사에 속합니다.
\n
\n
스냅태그 주식회사는 앱이 최대한 유용하고 효율적인지 확인하기 위해 노력하고 있습니다. 따라서 당사는 언제, 어떤 이유로든 앱을 변경하거나 해당 서비스에 대한 비용을 청구할 권리가 있습니다. 우리는 당신이 정확히 무엇을 지불하는지 밝히지 않고서는 당신에게 앱이나 서비스에 대한 요금을 청구하지 않을 것입니다.
\n
\n
SnapTag 앱은 귀하가 당사에 제공한 개인 데이터를 저장하고 처리하여 서비스를 제공합니다. 당신의 전화기와 앱에 대한 액세스를 안전하게 유지하는 것은 당신의 책임입니다. 따라서 장치의 공식 운영 체제에 의해 부과된 소프트웨어 제한 및 제한을 제거하는 과정인 전화기를 탈옥하거나 뿌리를 내리지 않는 것이 좋습니다. 이로 인해 전화기가 멀웨어/바이러스/악성 프로그램에 취약해지고 전화기의 보안 기능이 손상되며 SnapTag 앱이 제대로 작동하지 않거나 아예 작동하지 않을 수 있습니다.
\n
\n
스냅태그 주식회사에서 책임지지 않는 몇 가지 사항이 있습니다. 앱의 특정 기능을 사용하려면 앱이 인터넷에 연결되어 있어야 합니다. 연결은 Wi-Fi이거나 모바일 네트워크 공급자가 제공할 수 있지만, Wi-Fi에 액세스할 수 없고 데이터 허용량이 남아 있지 않으면 SnapTag Inc가 앱이 전체 기능에서 작동하지 않는 책임을 지지 않습니다.
\n
\n
Wi-Fi가 있는 지역 밖에서 앱을 사용하는 경우, 모바일 네트워크 공급자와의 계약 조건은 그대로 적용됩니다. 그 결과, 앱에 접속하는 동안 데이터 비용 또는 기타 제3자 요금에 대해 모바일 제공자가 요금을 청구할 수 있습니다. 귀하는 앱 사용에 있어 홈 영역(예: 지역 또는 국가) 밖에서 데이터 로밍을 끄지 않고 앱을 사용할 경우 로밍 데이터 요금을 포함한 모든 요금에 대해 책임을 져야 합니다. 앱 사용 중인 기기의 요금 납부자가 아닌 경우, 요금 납부자로부터 앱 사용 허가를 받은 것으로 간주합니다.
\n
\n
마찬가지로 스냅태그 주식회사가 애플리케이션 사용 방식을 항상 책임질 수는 없습니다. 장치가 충전 상태를 유지하도록 해야 합니다. 배터리가 다 되어서 서비스를 이용할 수 없는 경우 스냅태그 주식회사가 책임을 지지 않습니다.
\n
\n
앱 사용에 대한 스냅태그 주식회사의 책임과 관련하여, 앱을 사용하는 경우 NAT은 앱이 항상 업데이트되고 올바르게 유지되도록 노력하고 있지만, NAT은 귀하에게 제공할 수 있도록 타사로부터 정보를 제공받습니다. 스냅태그 주식회사는 앱의 이러한 기능에 전적으로 의존한 결과 발생하는 직접적 또는 간접적 손실에 대해 어떠한 책임도 지지 않습니다.
\n
\n
어느 시점에서는 앱을 업데이트하고 싶어질 수 있습니다. 앱은 현재 Android &amp; iOS에서 사용할 수 있으며, 두 시스템(그리고 앱의 가용성을 확장하기로 결정한 모든 추가 시스템의 경우)에 대한 요구 사항이 변경될 수 있으며, 앱을 계속 사용하려면 업데이트를 다운로드해야 합니다. 스냅태그 주식회사는 사용자와 관련이 있거나 기기에 설치한 Android &amp; iOS 버전에서 작동하도록 앱을 항상 업데이트한다고 약속하지 않습니다. 그러나 귀하는 귀하에게 제공되는 애플리케이션에 대한 업데이트를 항상 수락할 것을 약속하며, 당사는 또한 앱 제공을 중단할 수 있으며, 귀하에게 종료 통보를 하지 않고 언제든지 앱 사용을 종료할 수 있습니다. 달리 알려드리지 않는 한, (a) 본 약관에 따라 귀하에게 부여된 권한 및 라이센스는 종료됩니다. (b) 앱 사용을 중지하고 (필요한 경우) 기기에서 삭제해야 합니다.
\n
\n
**본 약관의 변경 사항**
\n
\n
당사는 약관을 수시로 업데이트할 수 있습니다. 따라서 이 페이지에서 변경 사항을 정기적으로 검토하는 것이 좋습니다. 변경 사항은 이 페이지에 새 약관을 게시하여 알려드립니다.
\n
\n
본 약관은 2021-07-01년부터 유효합니다.
\n
\n
*연락처*
\n
\n
당사의 이용 약관에 대한 질문이나 제안이 있으시면 주저하지 마시고 contact@snaptag.co.kr으로 문의하십시오.
\n
\n
\n

    </string>
    <string name="txt_frequent_use1">
        앱을 열고 카메라 화면에 제품 이미지를 촬영해 주세요. LABCODE 기술이 자동적으로 스캔 될 거예요.
        \n
        \n
        다음과 같은 경우는 인식이 어려워요.
        \n
        \n
        1. 너무 멀리서 스캔 한 경우
        \n
        2. 과도한 빛 반사가 있는 경우
        \n
        3. 카메라가 초점을 잡지 못한 경우
        \n
        4. 너무 기울여서 스캔한 경우
        \n
        \n
        스캔 가이드 보기를 통해 더 자세히 확인할 수 있어요.
    </string>
    <string name="txt_frequent_use2">
        해당 제품을 촬영했을 때 스캔이 되지 않는다면 가품으로 의심되므로 고객센터로 연락해 주세요.
        \n
        고객센터: 031-628-4351
        \n
        \n
        *스캔 확인이 안된다면 스캔 가이드 보기를 재확인 후 한번 더 시도해 주세요.
    </string>
    <string name="txt_frequent_use3">
        문의 화면으로 이동을 통해 문의해 주시면 내용 확인 후 솔루션 적용을 도와드리겠습니다.
    </string>
    <string name="txt_frequent_tech1">
        랩 코드는 고객님이 구매하신 제품의 정품 여부를 확인은 물론 제품 정보와 개별 제품의 이력 추적까지 제공하는 워터마크 보안솔루션이에요.
    </string>
    <string name="txt_frequent_tech2">
        LABCODE는 제품 패키지에 들어가는 디자인에 보이지 않는 데이터를 적용하고, 카메라를 이용해 데이터를 읽는 기술이에요. 국내 유일한 솔루션이며, 더 자세한 내용이 궁금하다면 LABCODE 소개 보기를 통해 확인해 주세요.
    </string>
    <string name="txt_customer_service">고객센터</string>
    <string name="txt_customer_service_account">위챗 계정 정보</string>
    <string name="txt_customer_service_account_content">cintamu1004cn</string>
    <string name="txt_customer_service_num">전화번호</string>
    <string name="txt_customer_service_num_content">186-6368-7709</string>
    <string name="txt_personal_info">개인정보처리방침</string>
    <string name="txt_personal_info_content">
1.개인정보처리방침\n
凯迪希（上海）国际贸易有限公司 는 이용자의 \'동의를 기반으로 개인정보를 수집·이용 및 제공\'하고 있으며,\'이용자의 권리 (개인정보 자기결정권)를 적극적으로 보장\'합니다.\n
\n
회사는 정보통신서비스제공자가 준수하여야 하는 대한민국의 관계 법령 및 개인정보보호 규정, 가이드라인을 준수하고 있습니다.\n
\n
“개인정보 처리방침”이란 이용자의 소중한 개인정보를 보호함으로써 이용자가 안심하고 서비스를 이용할 수 있도록 회사가 준수해야 할 지침을 의미합니다.\n
\n
본 개인정보 처리방침은 ‘红线扫 ’(이하 \'서비스\'라 함)에 적용됩니다.\n
\n
2. 개인정보 수집\n
서비스 제공을 위한 필요 최소한의 개인정보를 수집하고 있습니다.\n
회원 가입 시 또는 서비스 이용 과정에서 홈페이지 또는 개별 어플리케이션이나 프로그램 등을 통해 아래와 같은 서비스 제공을 위해 필요한 최소한의 개인정보를 수집하고 있습니다.\n
\n
[红线扫]\n
필수\n
이메일 주소, 스마트폰 등 단말기의 GPS정보, 계정생성시 기입한 생년월일, 성별 등 사용자 식별을 위한 기본정보, IMEI(이용자 기기의 고유한 정보를 원래 값을 확인하지 못하도록 안전하게 변환 후 이용)\n
\n
[고객센터]\n`
필수\n
전화번호, 계정(이메일)\n
\n
일부 서비스에서는 특화된 여러 기능들을 제공하기 위해 ‘계정’에서 공통으로 수집하는 정보 외 이용자 동의 후 추가적인 개인정보를 수집할 수 있습니다.\n
필수정보란? : 해당 서비스의 본질적 기능을 수행하기 위한 정보\n
선택정보란? : 보다 특화된 서비스를 제공하기 위해 추가 수집하는 정보 (선택 정보를 입력하지 않은 경우에도 서비스 이용 제한은 없습니다.)\n
개인정보를 수집하는 방법은 다음과 같습니다.\n
개인정보를 수집하는 경우에는 반드시 사전에 이용자에게 해당 사실을 알리고 동의를 구하고 있으며, 아래와 같은 방법을 통해 개인정보를 수집합니다.\n
\n
회원가입 및 서비스 이용 과정에서 이용자가 개인정보 수집에 대해 동의를 하고 직접 정보를 입력하는 경우\n
고객센터를 통한 상담 과정에서 웹페이지, 메일, 팩스, 전화 등\n
온·오프라인에서 진행되는 이벤트/행사 등 참여\n
서비스 이용 과정에서 이용자로부터 수집하는 개인정보는 아래와 같습니다.\n
모바일 웹/앱 이용 과정에서 단말기정보(OS, 화면사이즈, 디바이스 아이디), IP주소, GPS정보, 쿠키, 방문일시, 부정이용기록, 서비스 이용 기록 등의 정보가 자동으로 생성되어 수집될 수 있습니다.\n
\n
3. 개인정보 이용\n
회원관리, 서비스 제공·개선, 신규 서비스 개발 등을 위해 이용합니다.\n
회원 가입 시 또는 서비스 이용 과정에서 홈페이지 또는 개별 어플리케이션이나 프로그램 등을 통해 아래와 같이 서비스 제공을 위해 필요한 최소한의 개인정보를 수집하고 있습니다.\n
\n
회원 식별/가입의사 확인, 본인/연령 확인, 부정이용 방지\n
이용자간 메시지 전송, 친구등록 및 친구추천 기능의 제공\n
친구에게 활동내역을 알리거나 이용자 검색, 등록 등의 기능 제공\n
인구통계학적 특성에 따른 분석 및 서비스 제공\n
신규 서비스 개발, 다양한 서비스 제공, 문의사항 또는 불만처리, 공지사항 전달\n
유료서비스 이용 시 컨텐츠 등의 전송이나 배송·요금 정산\n
서비스의 원활한 운영에 지장을 주는 행위(계정 도용 및 부정 이용 행위 등 포함)에 대한 방지 및 제재\n
이벤트/행사 참여 확인, 마케팅 및 광고 등에 활용\n
음성명령 인식 및 개인화 서비스 제공\n
서비스 이용 기록, 접속 빈도 및 서비스 이용에 대한 통계, 프라이버시 보호 측면의 서비스 환경 구축, 맞춤형 서비스 제공, 서비스 개선에 활용\n
4. 개인정보 제공\n
회사는 이용자의 별도 동의가 있는 경우나 법령에 규정된 경우를 제외하고는 이용자의 개인정보를 제3자에게 제공하지 않습니다.\n
5. 개인정보 파기\n
개인정보는 수집 및 이용목적이 달성되면 지체없이 파기하며, 절차 및 방법은 다음과 같습니다.\n
전자적 파일 형태인 경우 복구 및 재생되지 않도록 안전하게 삭제하고, 그 밖에 기록물, 인쇄물, 서면 등의 경우 분쇄하거나 소각하여 파기합니다.\n
\n
다만, 내부방침에 보관 후 파기하는 정보는 아래와 같습니다.\n
1)아래 정보는 탈퇴일부터 최대 1년간 보관 후 파기합니다.\n
-. 안내메일 발송 및 CS문의 대응을 위해 계정과 탈퇴안내 이메일 주소를 암호화하여 보관\n
-. 서비스 부정이용 기록\n
\n
또한, 회사는 ‘개인정보 유효기간제’에 따라 1년간 서비스를 이용하지 않은 회원의 개인정보를 별도로 분리 보관 또는 삭제하고 있으며,\n
분리 보관된 개인정보는 4년간 보관 후 지체없이 파기합니다.\n
\n
6. 기타\n
회사는 여러분의 권리를 보호합니다.\n
언제든 자신의 개인정보(만 14세 미만인 경우 법정 대리인)를 조회하거나 수정할 수 있으며 수집 및 이용에 대한 동의 철회 또는 가입 해지를 요청할 수도 있습니다.\n
보다 구체적으로는 서비스 내 설정 기능을 통한 변경, 가입 해지(동의 철회)를 위해서는 서비스 내 "계정삭제"를 클릭하면 되며, 고객센터를 통해 서면, 전화 또는 이메일로 연락하시면 지체 없이 조치하겠습니다.\n
개인정보의 오류에 대한 정정을 요청하신 경우 정정을 완료하기 전까지 해당 개인정보를 이용 또는 제공하지 않습니다.\n
\n
개인정보보호와 관련해서 궁금하신 사항은?\n
서비스를 이용하면서 발생하는 모든 개인정보보호 관련 문의, 불만, 조언이나 기타 사항은 개인정보 보호책임자 및 담당부서로 연락해 주시기 바랍니다. 회사는 여러분의 목소리에 귀 기울이고 신속하고 충분한 답변을 드릴 수 있도록 최선을 다하겠습니다.\n
\n
개인정보보호 책임자 및 담당부서\n
책임자 : KIM JANG SUP\n
담당부서 : 凯迪希（上海）国际贸易有限公司\n
문의 : jskim@kdchem.co.kr\n
또한 개인정보가 침해되어 이에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하셔서 도움을 받으실 수 있습니다.\n
\n
개인정보 처리방침이 변경되는 경우\n
법률이나 서비스의 변경사항을 반영하기 위한 목적 등으로 개인정보 처리방침을 수정할 수 있습니다.\n
개인정보 처리방침이 변경되는 경우 회사는 변경 사항을 게시하며,\n
변경된 개인정보 처리방침은 게시한 날로부터 7일 후부터 효력이 발생합니다.\n
다만, 수집하는 개인정보의 항목, 이용목적의 변경 등과 같이 이용자 권리의 중대한 변경이 발생할 때에는 최소 30일 전에 미리 알려드리겠습니다.\n
\n
공고일자: 2021년 11월 15일\n
시행일자: 2021년 11월 15일\n
    </string>
    <string name="txt_camera_setting_text">
        카메라 설정
    </string>
    <string name="txt_sound">
        소리
    </string>
    <string name="txt_vibrate">
        진동
    </string>
    <string name="txt_on">
        ON
    </string>
    <string name="txt_off">
        OFF
    </string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>