<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="312dp"
        android:layout_height="245dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="245dp">

            <TextView
                android:id="@+id/network_error"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:padding="20dp"
                android:text="@string/txt_network_error"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:id="@+id/alert_v_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/network_error"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                    android:id="@+id/network_try_again"
                    android:layout_width="match_parent"
                    android:layout_height="116dp"
                    android:text="@string/txt_network_try_again"
                    app:layout_constraintTop_toBottomOf="@+id/alert_v_1"
                    android:gravity="center"/>

                <View
                    android:id="@+id/alert_v_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/network_try_again"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/alert_tv_button"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:text="@string/txt_agree"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

