<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A6000000">

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                >


                <TextView
                    android:id="@+id/network_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_personal_info_access"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                     />

                <View
                    android:id="@+id/alert_v_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#F2F4F5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/network_error" />

                <TextView
                    android:id="@+id/network_try_again"
                    android:layout_width="wrap_content"
                    android:layout_height="275dp"
                    android:gravity="center"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alert_v_1" />

                <View
                    android:id="@+id/alert_v_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/network_try_again"
                    android:background="#F2F4F5"/>

                <View
                    android:id="@+id/alert_v_3"
                    android:layout_width="1dp"
                    android:layout_height="63dp"
                    android:background="#F2F4F5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alert_v_2" />


                <TextView
                    android:id="@+id/alert_tv_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_reject"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    app:layout_constraintRight_toLeftOf="@+id/alert_v_3"
                    android:layout_marginRight="60dp"
                    app:layout_constraintTop_toBottomOf="@+id/alert_v_2"
                    />


                <TextView
                    android:id="@+id/alert_tv_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_agree"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    app:layout_constraintLeft_toRightOf="@+id/alert_v_3"
                    android:layout_marginLeft="60dp"
                    app:layout_constraintTop_toBottomOf="@+id/alert_v_2"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


</LinearLayout>

